complete redo of code

--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -6,7 +6,25 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+h1 {
+  font-weight: 900;
+  font-size: 45px;
+  color: white;
+}
+h2 {
+  font-weight: 500;
+  font-size: 23px;
+}
+p {
+  font-weight: 500;
+  font-size: 21px;
+  color: white;
+}
+a {
+  font-weight: 900;
+  font-size: 16px;
+  color: white;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
